force-app/main/default/objects/LLC_BI__Requirement__c/LLC_BI__Requirement__c.object-meta.xml
<CustomObject>
    <description>A Requirement defines a need which must be fulfilled in order to complete a business process or workflow.</description>
    <label>Requirement</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>