force-app/main/default/objects/LLC_BI__Requirement__c/fields/LLC_BI__Action__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Action__c</fullName>
    <description>This required field populates based on the action that the user selects. This field contains the action of each individual maintenance request.</description>
    <inlineHelpText>This required field populates based on the action that the user selects. This field contains the action of each individual maintenance request.</inlineHelpText>
    <label>Action</label>
    <length>80</length>
    <type>Text</type>
</CustomField>