force-app/main/default/objects/LLC_BI__Requirement__c/fields/LLC_BI__Assignee__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Assignee__c</fullName>
    <description>This formula field displays the name of the User or Queue who owns this Requirement.</description>
    <formula>BLANKVALUE( Owner:Queue.QueueName , Owner:User.FirstName + &apos; &apos; + Owner:User.LastName )</formula>
    <inlineHelpText>This formula field displays the name of the User or Queue who owns this Requirement.</inlineHelpText>
    <label>Assignee</label>
    <type>Text</type>
</CustomField>