force-app/main/default/objects/LLC_BI__Requirement__c/fields/LLC_BI__Checklist__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Checklist__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This required field contains a reference to the Checklist to which this Requirement belongs.</description>
    <inlineHelpText>This required field contains a reference to the Checklist to which this Requirement belongs.</inlineHelpText>
    <label>Checklist</label>
    <referenceTo>LLC_BI__Checklist__c</referenceTo>
    <relationshipLabel>Requirements</relationshipLabel>
    <relationshipName>Requirements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>