force-app/main/default/objects/LLC_BI__Requirement__c/fields/LLC_BI__Context_Data__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Context_Data__c</fullName>
    <description>The system automatically populates this optional text field to include lookupKeys to Snapshot data. By default, the value is blank.</description>
    <label>Context Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>