force-app/main/default/objects/LLC_BI__Requirement__c/fields/LLC_BI__Context_Id__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Context_Id__c</fullName>
    <description>This field contains the id of the record to which this Requirement pertains.</description>
    <formula>LLC_BI__Checklist__r.LLC_BI__Context_Id__c</formula>
    <inlineHelpText>This field contains the id of the record to which this Requirement pertains.</inlineHelpText>
    <label>Context Id</label>
    <type>Text</type>
</CustomField>