force-app/main/default/objects/LLC_BI__Requirement__c/fields/LLC_BI__Expected_Duration_Days__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Expected_Duration_Days__c</fullName>
    <description>This optional field contains the number of days expected to complete this Requirement.</description>
    <inlineHelpText>This optional field contains the number of days expected to complete this Requirement.</inlineHelpText>
    <label>Expected Duration Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>