force-app/main/default/objects/LLC_BI__Requirement__c/fields/LLC_BI__Needed_By__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Needed_By__c</fullName>
    <description>This field is optional. It defines which stage needs the requirement to be complete.</description>
    <label>Needed By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Credit Underwriting</fullName>
            </value>
            <value>
                <fullName>Final Review</fullName>
            </value>
            <value>
                <fullName>Approval / Loan Committee</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Doc Prep</fullName>
            </value>
            <value>
                <fullName>Closing</fullName>
            </value>
            <value>
                <fullName>Booking &amp; Funding</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>