force-app/main/default/objects/LLC_BI__Requirement__c/fields/LLC_BI__Needed_By_Context__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Needed_By_Context__c</fullName>
    <description>Represents the context metadata record needed by this requirement.</description>
    <inlineHelpText>Represents the context metadata record needed by this requirement.</inlineHelpText>
    <label>Needed By Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>