force-app/main/default/objects/LLC_BI__Requirement__c/fields/LLC_BI__Proxy_Id__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Proxy_Id__c</fullName>
    <description>This optional field is automatically populated with an ID of the object that is being acted upon.</description>
    <externalId>true</externalId>
    <inlineHelpText>This optional field is automatically populated with an ID of the object that is being acted upon.</inlineHelpText>
    <label>Proxy Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>