force-app/main/default/objects/LLC_BI__Requirement__c/fields/LLC_BI__Proxy_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Proxy_Type__c</fullName>
    <description>This optional field is automatically populated with the object API name that is being acted upon.</description>
    <inlineHelpText>This optional field is automatically populated with the object API name that is being acted upon.</inlineHelpText>
    <label>Proxy Type</label>
    <length>60</length>
    <type>Text</type>
</CustomField>