force-app/main/default/objects/LLC_BI__Requirement__c/listViews/ChecklistTeamQueue_Requirement.listView-meta.xml
<ListView>
    <fullName>ChecklistTeamQueue_Requirement</fullName>
    <filterScope>Queue</filterScope>
    <label>Team</label>
    <queue>ChecklistTeamQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>